--- a/pom.xml
+++ b/pom.xml
@@ -30,5 +30,16 @@
 			<version>3.141.59</version>
 		</dependency>
   </dependencies>
+  
+  <build>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <version>3.2.5</version>
+          </plugin>
+      </plugins>
+  </build>
+  
 </project>
 
