--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-surefire-plugin</artifactId>
               <version>3.2.5</version>
+               <configuration>
+                <includes>
+                    <include>page/*.java</include>
+                </includes>
+            </configuration>
           </plugin>
       </plugins>
   </build>
