--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>7.7.1</version>
+			<scope>test</scope>
 			
 		</dependency>
 		
@@ -37,11 +38,7 @@
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-surefire-plugin</artifactId>
               <version>3.2.5</version>
-               <configuration>
-                <includes>
-                    <include>page/*.java</include>
-                </includes>
-            </configuration>
+               
           </plugin>
       </plugins>
   </build>
